--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,8 +67,16 @@ a {
   }
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 table {
   border-collapse: collapse;
+  margin-bottom: 10%;
 }
 
 td,
@@ -81,4 +89,37 @@ th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.title {
+  font-size: 50px;
+  margin-bottom: 5%;
+}
+#userAnomalySetting {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+}
+#userAnomalySetting > * {
+  font-size: 20px;
+  margin: 30px 0px 30px 0px; /* ajoute une marge de 10 pixels en haut et en bas de chaque élément */
+}
+
+#submit {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background: linear-gradient(to bottom, #ffa07a, #ff7f50);
+}
+#submit:hover {
+  background: linear-gradient(to bottom, #17a6f8, #16b8aa);
+}
+
+#submit:active {
+  transform: translateY(5px);
 }
